compactSupported() should be false on disagg

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Storage Engines - Server Integration
    • Minor Change
    • ALL
    • SESISailing - 2025-12-09, TYStorEx4Candy - 2026-01-27, ReturnOfTheNix - 2026-02-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Running the compact command

      // force:true required for primary
      db.test.runCommand("compact", {force: true});
      

       on disagg fails with

      [js_test:compact] d20046| {"t":{"$date":"2025-11-18T05:27:01.544+00:00"},"s":"I",  "c":"COMMAND",  "id":20284,   "ctx":"conn1","msg":"Compact begin","attr":{"namespace":"test.test"}}
      [js_test:compact] d20046| {"t":{"$date":"2025-11-18T05:27:01.545+00:00"},"s":"E",  "c":"WT",       "id":22435,   "ctx":"conn1","msg":"WiredTiger error message","attr":{"error":95,"message":{"ts_sec":1763443621,"ts_usec":544832,"thread":"9332:0xe43c2db68900","session_name":"WT_SESSION.compact","category":"WT_VERB_DEFAULT","log_id":1000000,"category_id":12,"verbose_level":"ERROR","verbose_level_id":-3,"msg":"int __wti_session_compact(WT_SESSION *, const char *, const char *):409:Compaction does not work with disaggregated storage.","error_str":"Operation not supported","error_code":95}}}
      [js_test:compact] d20046| {"t":{"$date":"2025-11-18T05:27:01.545+00:00"},"s":"F",  "c":"ASSERT",   "id":23083,   "ctx":"conn1","msg":"Invariant failure","attr":{"expr":"ret","error":"UnknownError: 95: Operation not supported - Compaction does not work with disaggregated storage.","location":"src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp:516:26:StatusWith<int64_t> mongo::WiredTigerRecordStore::wtCompact(OperationContext *, WiredTigerRecoveryUnit &, const CompactOptions &)"}}
      [js_test:compact] d20046| {"t":{"$date":"2025-11-18T05:27:01.545+00:00"},"s":"F",  "c":"ASSERT",   "id":23084,   "ctx":"conn1","msg":"\n\n***aborting after invariant() failure\n\n"}
      [js_test:compact] d20046| {"t":{"$date":"2025-11-18T05:27:01.545+00:00"},"s":"F",  "c":"CONTROL",  "id":6384300, "ctx":"conn1","msg":"Writing fatal message","attr":{"message":"Got signal: 6 (Aborted).\n"}}

      We should make compactSupported return false on disagg.

       

            Assignee:
            Dennis Cheung
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: