SERVER-114056 compactSupported() should be false on disagg (#47187)

GitOrigin-RevId: 795df024bb9d03cc8a157e8c71ac6910943c1ceb