src/mongo/db/rss/persistence_provider.h
@@ -206,6 +206,11 @@ public:
      * The default memory_page_max value to set on WT for the oplog in string format.
      */
     virtual const char* getWTMemoryPageMaxForOplogStrValue() const = 0;
+
+    /**
+     * If true, the provider supports compaction.
+     */
+    virtual bool supportsCompaction() const = 0;
 };
 
 }  // namespace rss
